[Fixed] Documentation Swagger
